<resources>
    <string name="app_name">HomeWork3</string>
    <string name="title_name">Космея</string>
    <string name="pre_view">Космея – идеальный цветок для садоводов, которые хотят вырастить на своем участке пышный, яркий, высокий и неприхотливый цветок. В этом материале вы ознакомитесь с описанием космеи, а также с особенностями посадки и ухода за этой садовой культурой.</string>
    <string name="pre_button">Узнать больше</string>
    <string name="pre_title">Лучшее растение для начинающего цветовода</string>
    <string name="detail_text">Космея (народное название – «Космос») – относится к роду однолетних и многолетних травянистых культур из семейства Астровые. В естественной среде повсеместно встречается на территории Южной (реже Северной) Америки. На сегодняшний день исследователи выделяют около 40 отдельных разновидностей космеи, среди которых только две активно выращиваются садоводами: дваждыперистая и серно-желтая космея.</string>
    <string name="detail_text2">Космея представлена многочисленными побегами зеленого цвета с красноватыми прожилками. В зависимости от сорта и вида цветка отдельные побеги могут вырастать вплоть до 1,5 метра в высоту. Зеленая поросль космеи обладает разлапистой структурой, из-за чего растение часто путают с кустарником.</string>
    <string name="detail_text3">Цветение космеи длится около 3 месяцев – начинается в июне или июле и заканчивается с наступлением первых заморозков. Соцветия космеи большие, метельчатого типа, обычно не превышают в диаметре 12 см. Бутоны трубчатого типа, розоватого, синего, красного, коричневого или лилового цвета с желтыми пыльниками.</string>
    <string name="detail_text4">Как уже было сказано, существует около 40 видов космеи, однако всего 2 из них активно выращиваются на садовых участках. Кроме этих видов, существует огромное количество сортов космеи.</string>
    <string name="title_varieties">Виды и сорта</string>
    <string name="var1_title">Дваждыперистая</string>
    <string name="var1_text">Космея этого вида включает однолетние сорта с оливковыми тонкими листьями, напоминающими укроп, хрупкими цветоносами, а также соцветиями красного, белого и розового цвета. Такие растения достигают 150 см в высоту. Самые популярные сорта такой космеи – «Радианс» – гофрированные лепестки с контрастными пятнами возле сердцевины, «Пурити» – белые, треугольные и широкие лепестки, «Сенсация» – один из самых долгоцветущих сортов с многочисленными соцветиями сиреневого цвета.</string>
    <string name="varitable">Виды и сорта</string>
    <string name="var2_title">Серно-желтая</string>
    <string name="var3_title">Кроваво-красная</string>
    <string name="var4_title">Шоколадная</string>>
    <string name="var2_text">Также высокий вид – эти цветки могут вырастать до 1,2-1,5 м в высоту, при этом обладают пышными ветвящимися стеблями. Соцветия преимущественно желтые или оранжевые до 5 см в диаметре и с зубчатым контуром. Известные сорта: «Бильбо» – низкорослая космея до 0,5 м в высоту с полумахровыми персиковыми бутонами, «Диабло» – большие желто-красные цветы, «Crest Lemon» – карликовый сорт с желтыми соцветиями на коротких стеблях (до 0,5 м).</string>
    <string name="var3_text">Характеризуется большими бурыми или бордовыми соцветиями с темной сердцевиной и бархатистыми лепестками.Этот вид космеи популярен также благодаря своему кофейному аромату.</string>
    <string name="var4_text">Многолетний сорт прямиком из Мексики – отличается большими бордовыми или черными бутонами до 4 см в диаметре, сладковатым кофейным запахом и высотой до 1,5 м.</string>
    <string name="title_description">Описание</string>
</resources>