<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            style="@style/Theme.HomeWork3.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="270dp"

            android:layout_marginTop="0sp"

            android:layout_marginBottom="0sp"
            android:contentDescription="@string/title_name"
            app:layout_constraintBottom_toBottomOf="@id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:srcCompat="@drawable/bp" />

        <TextView
            android:id="@+id/preTitleView"
            style="@style/Theme.HomeWork3.Line2.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="0sp"

            android:layout_marginBottom="0sp"
            android:text="@string/pre_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/preTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="0sp"
            android:layout_marginBottom="20sp"
            android:text="@string/pre_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/next_activity_button"
            style="@style/Theme.HomeWork3.Button.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/pre_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/varitable_activity_button"
            style="@style/Theme.HomeWork3.Button.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginLeft="0sp"
            android:layout_marginTop="0sp"
            android:layout_marginEnd="0sp"
            android:layout_marginRight="0sp"
            android:layout_marginBottom="0sp"
            android:text="@string/varitable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>