<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/title_name_view"
            style="@style/Theme.HomeWork3.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_varieties"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_text_view"
                    style="@style/Theme.HomeWork3.Line2.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var1_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageVar1View"
                    android:layout_width="wrap_content"
                    android:layout_height="230sp"
                    android:layout_gravity="left"
                    android:contentDescription="@string/var1_title"
                    app:layout_constraintBottom_toBottomOf="@id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:srcCompat="@drawable/var1" />

                <TextView
                    android:id="@+id/detail_text_view_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:text="@string/var1_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail2_text_view"
                    style="@style/Theme.HomeWork3.Line2.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var2_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageVar2View"
                    android:layout_width="wrap_content"
                    android:layout_height="230sp"
                    android:layout_gravity="left"
                    android:contentDescription="@string/var2_title"
                    app:layout_constraintBottom_toBottomOf="@id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:srcCompat="@drawable/var2" />

                <TextView
                    android:id="@+id/detail2_text_view_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var2_text"
                    android:layout_marginBottom="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail3_text_view"
                    style="@style/Theme.HomeWork3.Line2.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var3_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageVar3View"
                    android:layout_width="wrap_content"
                    android:layout_height="230sp"
                    android:layout_gravity="left"
                    android:contentDescription="@string/var3_title"
                    app:layout_constraintBottom_toBottomOf="@id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:srcCompat="@drawable/var3" />

                <TextView
                    android:id="@+id/detail_text_view_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var3_text"
                    android:layout_marginBottom="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail4_text_view"
                    style="@style/Theme.HomeWork3.Line3.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var4_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageVar4View"
                    android:layout_width="wrap_content"
                    android:layout_height="230sp"
                    android:layout_gravity="left"
                    android:contentDescription="@string/var4_title"
                    app:layout_constraintBottom_toBottomOf="@id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:srcCompat="@drawable/var4" />

                <TextView
                    android:id="@+id/detail_text_view_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var4_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>